redpanda/migrator: add note about performance tuning for high throughput

--- a/docs/modules/components/pages/inputs/redpanda_migrator.adoc
+++ b/docs/modules/components/pages/inputs/redpanda_migrator.adoc
@@ -133,6 +133,14 @@ For capabilities, guarantees, scheduling, and examples, see the output documenta
 the mapping between input and output components is done based on the label field. 
 The label of the input and output must match exactly for proper coordination.
 
+**Performance tuning for high throughput:** For workloads with high message rates or large messages, 
+adjust the following fields to increase buffer sizes and batch processing:
+- `partition_buffer_bytes`: Increase to 10MB or higher (default: 1MB)
+- `max_yield_batch_bytes`: Increase to 100MB or higher (default: 10MB)
+
+These settings allow the consumer to buffer more data per partition and yield larger batches, 
+reducing overhead and improving throughput at the cost of higher memory usage.
+
 == Fields
 
 === `seed_brokers`
