--- a/docs/modules/components/pages/outputs/redpanda_migrator.adoc
+++ b/docs/modules/components/pages/outputs/redpanda_migrator.adoc
@@ -75,7 +75,7 @@ output:
   label: ""
   redpanda_migrator:
     seed_brokers: [] # No default (required)
-    client_id: benthos
+    client_id: redpanda-connect
     tls:
       enabled: false
       skip_cert_verify: false
@@ -339,7 +339,7 @@ An identifier for the client connection.
 
 *Type*: `string`
 
-*Default*: `"benthos"`
+*Default*: `"redpanda-connect"`
 
 === `tls`
 
