--- a/docs/modules/components/pages/outputs/snowflake_put.adoc
+++ b/docs/modules/components/pages/outputs/snowflake_put.adoc
@@ -253,22 +253,20 @@ Upload message batches from realtime brokers such as Kafka persisting the batch 
 
 ```yaml
 input:
-  kafka:
-    addresses:
+  redpanda:
+    seed_brokers:
       - localhost:9092
     topics:
       - foo
-    consumer_group: benthos
-    batching:
-      count: 10
-      period: 3s
-      processors:
-        - mapping: |
-            meta kafka_start_offset = meta("kafka_offset").from(0)
-            meta kafka_end_offset = meta("kafka_offset").from(-1)
-            meta batch_timestamp = if batch_index() == 0 { now() }
-        - mapping: |
-            meta batch_timestamp = if batch_index() != 0 { meta("batch_timestamp").from(0) }
+    consumer_group: rpcn
+    max_yield_batch_bytes: 8MB
+  processors:
+    - mapping: |
+        meta kafka_start_offset = meta("kafka_offset").from(0)
+        meta kafka_end_offset = meta("kafka_offset").from(-1)
+        meta batch_timestamp = if batch_index() == 0 { now() }
+    - mapping: |
+        meta batch_timestamp = if batch_index() != 0 { meta("batch_timestamp").from(0) }
 
 output:
   snowflake_put:
