--- a/docs/modules/components/pages/outputs/snowflake_streaming.adoc
+++ b/docs/modules/components/pages/outputs/snowflake_streaming.adoc
@@ -200,7 +200,7 @@ channel_name and offset_token first. Removing the offset_token is a safer option
 
 ```yaml
 input:
-  redpanda_common:
+  redpanda:
     topics: ["my_topic_going_to_snow"]
     consumer_group: "redpanda_connect_to_snowflake"
     # We want very large batches - each batch will be sent to Snowflake individually
@@ -239,7 +239,7 @@ output:
     # to Snowflake. See the ordering documentation for the "redpanda" input for more details.
     - retry:
         output:
-          redpanda_common:
+          redpanda:
             topic: "dead_letter_queue"
 ```
 
