--- a/docs/modules/components/pages/caches/redpanda.adoc
+++ b/docs/modules/components/pages/caches/redpanda.adoc
@@ -50,7 +50,7 @@ Advanced::
 label: ""
 redpanda:
   seed_brokers: [] # No default (required)
-  client_id: benthos
+  client_id: redpanda-connect
   tls:
     enabled: false
     skip_cert_verify: false
@@ -110,7 +110,7 @@ An identifier for the client connection.
 
 *Type*: `string`
 
-*Default*: `"benthos"`
+*Default*: `"redpanda-connect"`
 
 === `tls`
 
