--- a/docs/modules/components/pages/inputs/kafka_franz.adoc
+++ b/docs/modules/components/pages/inputs/kafka_franz.adoc
@@ -58,7 +58,7 @@ input:
   label: ""
   kafka_franz:
     seed_brokers: [] # No default (required)
-    client_id: benthos
+    client_id: redpanda-connect
     tls:
       enabled: false
       skip_cert_verify: false
@@ -153,7 +153,7 @@ An identifier for the client connection.
 
 *Type*: `string`
 
-*Default*: `"benthos"`
+*Default*: `"redpanda-connect"`
 
 === `tls`
 
