--- a/docs/modules/components/pages/inputs/redpanda_migrator.adoc
+++ b/docs/modules/components/pages/inputs/redpanda_migrator.adoc
@@ -60,7 +60,7 @@ input:
   label: ""
   redpanda_migrator:
     seed_brokers: [] # No default (required)
-    client_id: benthos
+    client_id: redpanda-connect
     tls:
       enabled: false
       skip_cert_verify: false
@@ -172,7 +172,7 @@ An identifier for the client connection.
 
 *Type*: `string`
 
-*Default*: `"benthos"`
+*Default*: `"redpanda-connect"`
 
 === `tls`
 
