--- a/docs/modules/components/pages/outputs/redpanda.adoc
+++ b/docs/modules/components/pages/outputs/redpanda.adoc
@@ -37,7 +37,7 @@ Common::
 output:
   label: ""
   redpanda:
-    seed_brokers: [] # No default (required)
+    seed_brokers: [] # No default (optional)
     topic: "" # No default (required)
     key: "" # No default (optional)
     partition: ${! meta("partition") } # No default (optional)
@@ -57,8 +57,8 @@ Advanced::
 output:
   label: ""
   redpanda:
-    seed_brokers: [] # No default (required)
-    client_id: benthos
+    seed_brokers: [] # No default (optional)
+    client_id: redpanda-connect
     tls:
       enabled: false
       skip_cert_verify: false
@@ -93,11 +93,51 @@ output:
 Writes a batch of messages to Kafka brokers and waits for acknowledgement before propagating it back to the input.
 
 
+== Examples
+
+[tabs]
+======
+Simple Common Output::
++
+--
+
+Data is generated and written to a topic bar, targetting the cluster configured within the redpanda block at the bottom. This is useful as it allows us to configure TLS and SASL only once for potentially multiple inputs and outputs.
+
+```yaml
+input:
+  generate:
+    interval: 1s
+    mapping: 'root.name = fake("name")'
+
+pipeline:
+  processors:
+    - mutation: |
+        root.id = uuid_v4()
+        root.loud_name = this.name.uppercase()
+
+output:
+  redpanda:
+    topic: bar
+    key: ${! @id }
+
+redpanda:
+  seed_brokers: [ "127.0.0.1:9092" ]
+  tls:
+    enabled: true
+  sasl:
+    - mechanism: SCRAM-SHA-512
+      password: bar
+      username: foo
+```
+
+--
+======
+
 == Fields
 
 === `seed_brokers`
 
-A list of broker addresses to connect to in order to establish connections. If an item of the list contains commas it will be expanded into multiple addresses.
+A list of broker addresses to connect to in order to establish connections. If an item of the list contains commas it will be expanded into multiple addresses. When this field is omitted the global `redpanda` block will be referenced for connection details.
 
 
 *Type*: `array`
@@ -124,7 +164,7 @@ An identifier for the client connection.
 
 *Type*: `string`
 
-*Default*: `"benthos"`
+*Default*: `"redpanda-connect"`
 
 === `tls`
 
