--- a/docs/modules/components/pages/redpanda/about.adoc
+++ b/docs/modules/components/pages/redpanda/about.adoc
@@ -42,7 +42,7 @@ Advanced::
 # All config fields, showing default values
 redpanda:
   seed_brokers: [] # No default (required)
-  client_id: benthos
+  client_id: redpanda-connect
   tls:
     enabled: false
     skip_cert_verify: false
@@ -101,7 +101,7 @@ An identifier for the client connection.
 
 *Type*: `string`
 
-*Default*: `"benthos"`
+*Default*: `"redpanda-connect"`
 
 === `tls`
 
