--- a/docs/modules/configuration/pages/templating.adoc
+++ b/docs/modules/configuration/pages/templating.adoc
@@ -149,6 +149,8 @@ The stability of the template describing the likelihood that the configuration s
 | This template is beta and will therefore not change in a breaking way unless a major problem is found.
 | `experimental`
 | This template is experimental and therefore subject to breaking changes outside of major version releases.
+| `deprecated`
+| This template has been deprecated and should no longer be used.
 
 |===
 
