--- a/docs/modules/components/pages/inputs/gateway.adoc
+++ b/docs/modules/components/pages/inputs/gateway.adoc
@@ -39,6 +39,13 @@ input:
   gateway:
     path: /
     rate_limit: ""
+    sync_response:
+      status: "200"
+      headers:
+        Content-Type: application/octet-stream
+      metadata_headers:
+        include_prefixes: []
+        include_patterns: []
 ```
 
 --
@@ -60,6 +67,9 @@ input:
       metadata_headers:
         include_prefixes: []
         include_patterns: []
+    tcp:
+      reuse_addr: false
+      reuse_port: false
 ```
 
 --
@@ -112,7 +122,7 @@ An optional xref:components:rate_limits/about.adoc[rate limit] to throttle reque
 
 === `sync_response`
 
-Customize messages returned via xref:guides:sync_responses.adoc[synchronous responses].
+Sorry! This field is missing documentation.
 
 
 *Type*: `object`
@@ -195,5 +205,31 @@ include_patterns:
 include_patterns:
   - _timestamp_unix$
 ```
+
+=== `tcp`
+
+Customize messages returned via xref:guides:sync_responses.adoc[synchronous responses].
+
+
+*Type*: `object`
+
+
+=== `tcp.reuse_addr`
+
+Enable SO_REUSEADDR, allowing binding to ports in TIME_WAIT state. Useful for graceful restarts and config reloads where the server needs to rebind to the same port immediately after shutdown.
+
+
+*Type*: `bool`
+
+*Default*: `false`
+
+=== `tcp.reuse_port`
+
+Enable SO_REUSEPORT, allowing multiple sockets to bind to the same port for load balancing across multiple processes/threads.
+
+
+*Type*: `bool`
+
+*Default*: `false`
 
 
