--- a/docs/modules/components/pages/caches/redpanda.adoc
+++ b/docs/modules/components/pages/caches/redpanda.adoc
@@ -62,6 +62,7 @@ redpanda:
   metadata_max_age: 5m
   request_timeout_overhead: 10s
   conn_idle_timeout: 20s
+  tcp_user_timeout: 0s
   topic: "" # No default (required)
   allow_auto_topic_creation: true
 ```
@@ -475,6 +476,15 @@ The rough amount of time to allow connections to idle before they are closed.
 *Type*: `string`
 
 *Default*: `"20s"`
+
+=== `tcp_user_timeout`
+
+The TCP user timeout for detecting dead connections. Sets the TCP_USER_TIMEOUT socket option (Linux only). When set to 0 (default), the option is not applied. This controls how long transmitted data may remain unacknowledged before the TCP connection is forcibly closed. Recommended values: 60s-120s for environments with frequent broker maintenance.
+
+
+*Type*: `string`
+
+*Default*: `"0s"`
 
 === `topic`
 
