--- a/docs/modules/components/pages/caches/redpanda.adoc
+++ b/docs/modules/components/pages/caches/redpanda.adoc
@@ -391,6 +391,58 @@ Allows you to specify a custom endpoint for the AWS API.
 *Type*: `string`
 
 
+=== `sasl[].aws.tcp`
+
+TCP socket configuration.
+
+
+*Type*: `object`
+
+
+=== `sasl[].aws.tcp.keep_alive`
+
+TCP keep-alive probe configuration.
+
+
+*Type*: `object`
+
+
+=== `sasl[].aws.tcp.keep_alive.idle`
+
+Duration the connection must be idle before sending the first keep-alive probe. Zero defaults to 15s. Negative values disable keep-alive probes.
+
+
+*Type*: `string`
+
+*Default*: `"15s"`
+
+=== `sasl[].aws.tcp.keep_alive.interval`
+
+Duration between keep-alive probes. Zero defaults to 15s.
+
+
+*Type*: `string`
+
+*Default*: `"15s"`
+
+=== `sasl[].aws.tcp.keep_alive.count`
+
+Maximum unanswered keep-alive probes before dropping the connection. Zero defaults to 9.
+
+
+*Type*: `int`
+
+*Default*: `9`
+
+=== `sasl[].aws.tcp.tcp_user_timeout`
+
+Maximum time to wait for acknowledgment of transmitted data before killing the connection. Linux-only (kernel 2.6.37+), ignored on other platforms. When enabled, keep_alive.idle must be greater than this value per RFC 5482. Zero disables.
+
+
+*Type*: `string`
+
+*Default*: `"0s"`
+
 === `sasl[].aws.credentials`
 
 Optional manual configuration of AWS credentials to use. More information can be found in xref:guides:cloud/aws.adoc[].
