address review feedback

--- a/docs/modules/components/pages/processors/ffi.adoc
+++ b/docs/modules/components/pages/processors/ffi.adoc
@@ -54,14 +54,15 @@ pipeline:
   processors:
     - ffi:
         library_path: libc.6.so
-        function_name: symlink
-        args_mapping: 'root = ["./foo.txt", "./bar.txt"]'
+        function_name: memcmp
+        args_mapping: 'root = ["foo", "bar", 3]'
         signature:
           return:
             type: int32
           parameters:
             - type: byte*
             - type: byte*
+            - type: int64
 ```
 
 --
