--- a/docs/modules/components/pages/outputs/redpanda_migrator.adoc
+++ b/docs/modules/components/pages/outputs/redpanda_migrator.adoc
@@ -1240,7 +1240,7 @@ interval: '30m    # Sync every 30 minutes'
 
 === `schema_registry.include`
 
-Regular expressions for schema subjects to include in migration. If empty, all subjects are included (unless excluded).
+Regular expressions for schema subjects to include in migration. If empty, all subjects are included (unless excluded). Note: the migrator consumer group is always ignored.
 
 
 *Type*: `array`
@@ -1256,7 +1256,7 @@ include: '["user-.*", "order-.*"]'
 
 === `schema_registry.exclude`
 
-Regular expressions for schema subjects to exclude from migration. Takes precedence over include patterns.
+Regular expressions for schema subjects to exclude from migration. Takes precedence over include patterns. Note: the migrator consumer group is always ignored.
 
 
 *Type*: `array`
