--- a/docs/modules/components/pages/caches/redpanda.adoc
+++ b/docs/modules/components/pages/caches/redpanda.adoc
@@ -37,12 +37,6 @@ Common::
 label: ""
 redpanda:
   seed_brokers: [] # No default (required)
-  tcp:
-    keep_alive:
-      idle: 15s
-      interval: 15s
-      count: 9
-    tcp_user_timeout: 0s
   topic: "" # No default (required)
 ```
 
@@ -69,6 +63,7 @@ redpanda:
   request_timeout_overhead: 10s
   conn_idle_timeout: 20s
   tcp:
+    connect_timeout: 0s
     keep_alive:
       idle: 15s
       interval: 15s
@@ -495,6 +490,15 @@ TCP socket configuration.
 
 *Type*: `object`
 
+
+=== `tcp.connect_timeout`
+
+Maximum amount of time a dial will wait for a connect to complete. Zero disables.
+
+
+*Type*: `string`
+
+*Default*: `"0s"`
 
 === `tcp.keep_alive`
 
