--- a/docs/modules/components/pages/outputs/kafka_franz.adoc
+++ b/docs/modules/components/pages/outputs/kafka_franz.adoc
@@ -40,12 +40,6 @@ output:
   label: ""
   kafka_franz:
     seed_brokers: [] # No default (required)
-    tcp:
-      keep_alive:
-        idle: 15s
-        interval: 15s
-        count: 9
-      tcp_user_timeout: 0s
     topic: "" # No default (required)
     key: "" # No default (optional)
     partition: ${! meta("partition") } # No default (optional)
@@ -84,6 +78,7 @@ output:
     request_timeout_overhead: 10s
     conn_idle_timeout: 20s
     tcp:
+      connect_timeout: 0s
       keep_alive:
         idle: 15s
         interval: 15s
@@ -576,6 +571,15 @@ TCP socket configuration.
 
 *Type*: `object`
 
+
+=== `tcp.connect_timeout`
+
+Maximum amount of time a dial will wait for a connect to complete. Zero disables.
+
+
+*Type*: `string`
+
+*Default*: `"0s"`
 
 === `tcp.keep_alive`
 
