--- a/docs/modules/components/pages/caches/aws_dynamodb.adoc
+++ b/docs/modules/components/pages/caches/aws_dynamodb.adoc
@@ -41,12 +41,6 @@ aws_dynamodb:
   table: "" # No default (required)
   hash_key: "" # No default (required)
   data_key: "" # No default (required)
-  tcp:
-    keep_alive:
-      idle: 15s
-      interval: 15s
-      count: 9
-    tcp_user_timeout: 0s
 ```
 
 --
@@ -71,6 +65,7 @@ aws_dynamodb:
   region: "" # No default (optional)
   endpoint: "" # No default (optional)
   tcp:
+    connect_timeout: 0s
     keep_alive:
       idle: 15s
       interval: 15s
@@ -227,6 +222,15 @@ TCP socket configuration.
 
 *Type*: `object`
 
+
+=== `tcp.connect_timeout`
+
+Maximum amount of time a dial will wait for a connect to complete. Zero disables.
+
+
+*Type*: `string`
+
+*Default*: `"0s"`
 
 === `tcp.keep_alive`
 
