--- a/docs/modules/components/pages/caches/aws_s3.adoc
+++ b/docs/modules/components/pages/caches/aws_s3.adoc
@@ -39,12 +39,6 @@ label: ""
 aws_s3:
   bucket: "" # No default (required)
   content_type: application/octet-stream
-  tcp:
-    keep_alive:
-      idle: 15s
-      interval: 15s
-      count: 9
-    tcp_user_timeout: 0s
 ```
 
 --
@@ -66,6 +60,7 @@ aws_s3:
   region: "" # No default (optional)
   endpoint: "" # No default (optional)
   tcp:
+    connect_timeout: 0s
     keep_alive:
       idle: 15s
       interval: 15s
@@ -196,6 +191,15 @@ TCP socket configuration.
 
 *Type*: `object`
 
+
+=== `tcp.connect_timeout`
+
+Maximum amount of time a dial will wait for a connect to complete. Zero disables.
+
+
+*Type*: `string`
+
+*Default*: `"0s"`
 
 === `tcp.keep_alive`
 
