--- a/docs/modules/components/pages/outputs/aws_kinesis_firehose.adoc
+++ b/docs/modules/components/pages/outputs/aws_kinesis_firehose.adoc
@@ -46,12 +46,6 @@ output:
       byte_size: 0
       period: ""
       check: ""
-    tcp:
-      keep_alive:
-        idle: 15s
-        interval: 15s
-        count: 9
-      tcp_user_timeout: 0s
 ```
 
 --
@@ -75,6 +69,7 @@ output:
     region: "" # No default (optional)
     endpoint: "" # No default (optional)
     tcp:
+      connect_timeout: 0s
       keep_alive:
         idle: 15s
         interval: 15s
@@ -253,6 +248,15 @@ TCP socket configuration.
 
 *Type*: `object`
 
+
+=== `tcp.connect_timeout`
+
+Maximum amount of time a dial will wait for a connect to complete. Zero disables.
+
+
+*Type*: `string`
+
+*Default*: `"0s"`
 
 === `tcp.keep_alive`
 
