--- a/docs/modules/components/pages/processors/aws_lambda.adoc
+++ b/docs/modules/components/pages/processors/aws_lambda.adoc
@@ -40,12 +40,6 @@ label: ""
 aws_lambda:
   parallel: false
   function: "" # No default (required)
-  tcp:
-    keep_alive:
-      idle: 15s
-      interval: 15s
-      count: 9
-    tcp_user_timeout: 0s
 ```
 
 --
@@ -63,6 +57,7 @@ aws_lambda:
   region: "" # No default (optional)
   endpoint: "" # No default (optional)
   tcp:
+    connect_timeout: 0s
     keep_alive:
       idle: 15s
       interval: 15s
@@ -196,6 +191,15 @@ TCP socket configuration.
 
 *Type*: `object`
 
+
+=== `tcp.connect_timeout`
+
+Maximum amount of time a dial will wait for a connect to complete. Zero disables.
+
+
+*Type*: `string`
+
+*Default*: `"0s"`
 
 === `tcp.keep_alive`
 
