--- a/docs/modules/components/pages/inputs/aws_sqs.adoc
+++ b/docs/modules/components/pages/inputs/aws_sqs.adoc
@@ -39,12 +39,6 @@ input:
   aws_sqs:
     url: "" # No default (required)
     max_outstanding_messages: 1000
-    tcp:
-      keep_alive:
-        idle: 15s
-        interval: 15s
-        count: 9
-      tcp_user_timeout: 0s
 ```
 
 --
@@ -67,6 +61,7 @@ input:
     region: "" # No default (optional)
     endpoint: "" # No default (optional)
     tcp:
+      connect_timeout: 0s
       keep_alive:
         idle: 15s
         interval: 15s
@@ -192,6 +187,15 @@ TCP socket configuration.
 
 *Type*: `object`
 
+
+=== `tcp.connect_timeout`
+
+Maximum amount of time a dial will wait for a connect to complete. Zero disables.
+
+
+*Type*: `string`
+
+*Default*: `"0s"`
 
 === `tcp.keep_alive`
 
