--- a/docs/modules/components/pages/metrics/aws_cloudwatch.adoc
+++ b/docs/modules/components/pages/metrics/aws_cloudwatch.adoc
@@ -38,12 +38,6 @@ Common::
 metrics:
   aws_cloudwatch:
     namespace: Benthos
-    tcp:
-      keep_alive:
-        idle: 15s
-        interval: 15s
-        count: 9
-      tcp_user_timeout: 0s
   mapping: ""
 ```
 
@@ -61,6 +55,7 @@ metrics:
     region: "" # No default (optional)
     endpoint: "" # No default (optional)
     tcp:
+      connect_timeout: 0s
       keep_alive:
         idle: 15s
         interval: 15s
@@ -143,6 +138,15 @@ TCP socket configuration.
 
 *Type*: `object`
 
+
+=== `tcp.connect_timeout`
+
+Maximum amount of time a dial will wait for a connect to complete. Zero disables.
+
+
+*Type*: `string`
+
+*Default*: `"0s"`
 
 === `tcp.keep_alive`
 
