--- a/docs/modules/components/pages/outputs/opensearch.adoc
+++ b/docs/modules/components/pages/outputs/opensearch.adoc
@@ -88,6 +88,7 @@ output:
       region: "" # No default (optional)
       endpoint: "" # No default (optional)
       tcp:
+        connect_timeout: 0s
         keep_alive:
           idle: 15s
           interval: 15s
@@ -561,6 +562,15 @@ TCP socket configuration.
 
 *Type*: `object`
 
+
+=== `aws.tcp.connect_timeout`
+
+Maximum amount of time a dial will wait for a connect to complete. Zero disables.
+
+
+*Type*: `string`
+
+*Default*: `"0s"`
 
 === `aws.tcp.keep_alive`
 
