--- a/docs/modules/components/pages/processors/aws_bedrock_chat.adoc
+++ b/docs/modules/components/pages/processors/aws_bedrock_chat.adoc
@@ -38,12 +38,6 @@ Common::
 # Common config fields, showing default values
 label: ""
 aws_bedrock_chat:
-  tcp:
-    keep_alive:
-      idle: 15s
-      interval: 15s
-      count: 9
-    tcp_user_timeout: 0s
   model: amazon.titan-text-express-v1 # No default (required)
   prompt: "" # No default (optional)
   system_prompt: "" # No default (optional)
@@ -63,6 +57,7 @@ aws_bedrock_chat:
   region: "" # No default (optional)
   endpoint: "" # No default (optional)
   tcp:
+    connect_timeout: 0s
     keep_alive:
       idle: 15s
       interval: 15s
@@ -116,6 +111,15 @@ TCP socket configuration.
 
 *Type*: `object`
 
+
+=== `tcp.connect_timeout`
+
+Maximum amount of time a dial will wait for a connect to complete. Zero disables.
+
+
+*Type*: `string`
+
+*Default*: `"0s"`
 
 === `tcp.keep_alive`
 
